umbenennen home in index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="Get in Contact.html">Contact</a></li>
+                    <li><a href="Get_in_Contact.html">Contact</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
