--- a/Get_in_Contact.html
+++ b/Get_in_Contact.html
@@ -18,7 +18,7 @@
                 <h1>RA/QM Consultancy</h1> 
                 <h2>Contact</h2>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
